Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Olá, Mundo</h1>
     <hr>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam perspiciatis, rem veritatis ea voluptatum ab fugit vitae non aliquid molestiae cumque quo. Nobis, ea iure sit rem aliquid culpa eligendi?</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis hic earum aut nemo. Expedita odit odio officia, fugiat soluta laboriosam similique id corporis accusamus pariatur quidem dolor sed exercitationem nesciunt.</p>
 </body>
 </html>
